--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "blog-api",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -15,5 +14,6 @@
     "mongoose": "^8.8.1",
     "morgan": "^1.10.0",
     "nodemon": "^3.1.7"
-  }
+  },
+  "description": ""
 }
