--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "joi": "^17.13.3",
     "mongoose": "^8.8.1",
     "morgan": "^1.10.0",
-    "nodemon": "^3.1.7"
+    "nodemon": "^3.1.7",
+    "pug": "^3.0.3"
   }
 }
