--- a/package.json
+++ b/package.json
@@ -8,11 +8,16 @@
   "author": "Samuel",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "config": "^3.3.12",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "joi": "^17.13.3",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.8.1",
     "morgan": "^1.10.0",
+    "nodemailer": "^6.9.16",
     "nodemon": "^3.1.7"
   },
   "description": ""
